@@ -132,11 +132,11 @@ FONT 8, "MS Shell Dlg"
 BEGIN
     CONTROL         "List4",IDC_LISTMAILS,"SysListView32",LVS_REPORT | 
                     LVS_EDITLABELS | WS_BORDER | WS_TABSTOP,5,5,450,70
-    DEFPUSHBUTTON   "OK",IDC_BTNOK,395,90,60,15
+    DEFPUSHBUTTON   "",IDC_BTNOK,395,90,60,15
     PUSHBUTTON      "",IDC_BTNAPP,263,90,114,15
     PUSHBUTTON      "",IDC_BTNDEL,5,90,114,15
     LTEXT           "",IDC_STSTATUS,5,75,450,10
-    PUSHBUTTON      "Select All",IDC_BTNCHECKALL,150,91,92,14
+    PUSHBUTTON      "",IDC_BTNCHECKALL,150,91,92,14
 END
 
 IDD_DLGSHOWMESSAGE DIALOGEX 50, 200, 460, 132
